text som följer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<title>Andi Gjomakaj</title>
 </head>
 <body>
+	<div class="cursor-text" id="cursorText" data-hidden="true" aria-hidden="true"></div>
 	<header>
 		<div class="rubrik">
             <img src="cat.jpg" alt="" class="cat"> 
-        </div>>
+        </div>
 		<ul class="link">
 			<li><a href="#mig">#1 Om mig</a></li>
 			<li><a href="#project">#2 Mina projekt</a></li>
@@ -33,6 +34,6 @@
 			</article>
 		</section>
 	</main>
-    <script src="darkModeButton.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
