--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Passionate about clean code and innovative solutions.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">View My Work</a>
+                    <a href="#skills-projects" class="btn btn-primary">View My Work</a>
                     <a href="#about" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
@@ -163,8 +163,8 @@
             <div class="footer-content">
                 <p>&copy; 2025 Andi Gjomakaj.</p>
                 <div class="social-links">
-                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/AndiGj" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin" target="_blank"></i></a>
                 </div>
             </div>
         </div>
