Linked in link added

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <p>&copy; 2025 Andi Gjomakaj.</p>
                 <div class="social-links">
                     <a href="https://github.com/AndiGj" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-link"><i class="fab fa-linkedin" target="_blank"></i></a>
+                    <a href="https://www.linkedin.com/in/andi-gjomakaj-75b66337b/" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
