Added game maker

--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
                         <div class="skill-card">
                             <i class="fas fa-gamepad"></i>
                             <h3>Unity</h3>
-                            <p>Game engine development and 3D graphics</p>
+                            <p>Game engine development and 3D graphics/2D graphics</p>
+                        </div>
+                        <div class="skill-card">
+                            <i class="fas fa-gamepad"></i>
+                            <h3>Game maker</h3>
+                            <p>Game engine primarily used for 2D game development</p>
                         </div>
                     </div>
                 </div>
